--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,19 +4,49 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="16dp"
     android:orientation="vertical"
     android:padding="@dimen/layout_padding"
-    tools:context=".MainActivity"
-    >
+    tools:context=".MainActivity">
 
     <TextView
+        style="@style/my_font_style"
+        android:gravity="center"
         android:text="@string/my_name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/nickname_edit"
+        style="@style/my_font_style"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
         android:gravity="center"
-        style="@style/my_font_style" />
+        android:hint="@string/what_is_your_nickname"
+        android:inputType="textPersonName" />
+
+    <Button
+        android:id="@+id/done_button"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="16dp"
+        android:gravity="center_horizontal"
+        android:fontFamily="@font/roboto"
+        android:text="@string/done" />
+
+    <TextView
+        android:id="@+id/nickname_text"
+        style="@style/my_font_style"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text=""
+        android:visibility="gone" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -35,9 +65,9 @@
             android:orientation="vertical">
 
             <TextView
+                style="@style/my_font_style"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                style="@style/my_font_style"
                 android:text="@string/my_profile_desc" />
         </LinearLayout>
     </ScrollView>
